FIX: Add css to made menu bar on mobile screen verticle so  it fits better.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,6 @@ nav {
     margin-left: 4px;
     font-size: 2rem;
 
-    /*display:none; */
 }
 
 #menu {
@@ -66,6 +65,20 @@ nav {
 
 #menu>li {
     display: inline;
+}
+
+nav ul {
+    display: flex;
+    list-style-type: none;
+}
+
+nav ul li {
+    margin-right: 20px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color:#000
 }
 
 .active {
